remove z-index completely from nav-extended to resolve issues with modal-overlay and modal-content

--- a/admin-base/materialize/custom/_navbar.scss
+++ b/admin-base/materialize/custom/_navbar.scss
@@ -6,7 +6,6 @@ nav {
 
   &.nav-extended {
     position: relative;
-    z-index: 101;
   }
 
   .nav-wrapper {
